<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YCBrowser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="function_bookmark_history">书签/历史</string>
    <string name="function_download">下载记录</string>
    <string name="function_share">分享</string>
    <string name="function_setup">设置</string>
    <string name="function_add_bookmark">添加书签</string>
    <string name="function_no_picture">无图模式</string>
    <string name="function_has_picture">有图模式</string>
    <string name="function_night">夜间模式</string>
    <string name="function_day">日间模式</string>
    <string name="function_refresh">刷新</string>
    <string name="function_weblink">推荐网址</string>
    <string name="function_tool">工具箱</string>
    <string name="function_page_search">页内搜索</string>
    <string name="function_exit">退出</string>
    <string name="start_info">已经达到首页</string>
    <string name="end_info">已经达到最后一页</string>
    <string name="page_keywords">搜索关键字不能为空</string>
    <string name="title_activity_web_setting">WebSettingActivity</string>
    <string name="setting_basic">基础设置</string>
    <string name="setting_basic_brightness">屏幕亮度</string>
    <string name="setting_basic_home">主页设置</string>
    <string name="setting_basic_textsize">字体大小</string>
    <string name="setting_perfect">网页优化设置</string>
    <string name="setting_perfect_ad">拦截广告</string>
    <string name="setting_perfect_pic">无图模式</string>
    <string name="setting_full_screen">全屏模式</string>
    <string name="setting_download">下载管理</string>
    <string name="setting_download_location">下载位置设置</string>
    <string name="setting_download_list">下载列表</string>
    <string name="setting_senior">高级选项</string>
    <string name="setting_senior_enable_javascript">启用JavaScript</string>
    <string name="setting_senior_remeber_psd">记住表单</string>
    <string name="setting_senior_clean_memory">数据清除</string>
    <string name="setting_recover">重置默认设置</string>
    <string name="setting_title">浏览器设置</string>
    <string name="share_title">分享</string>
    <string name="share_weixin_firend">朋友</string>
    <string name="share_weixin_firends_circle">朋友圈</string>
    <string name="share_qq_friend">好友</string>
    <string name="share_weibo">微博</string>
    <string name="share_message">信息</string>
    <string name="share_copy_url">复制链接</string>
    <string name="share_cancel">取消</string>
    <string name="textsize_title">字体大小</string>
    <string name="textsize_small">小号</string>
    <string name="textsize_nomal">正常</string>
    <string name="textsize_big">大号</string>
    <string name="textsize_super_big">超大号</string>
    <string name="bah_tv_title_text">书签/历史</string>
    <string name="bookmark_syncing_tv_text">同步</string>
    <string name="bookmark_select_tv_text">全选</string>
    <string name="bookmark_select_tv_text2">取消全选</string>
    <string name="bookmark_edit_tv_text">编辑</string>
    <string name="bookmark_tv_delete_text">删除</string>
    <string name="bookmark_edit_title">编辑书签</string>
    <string name="bookmark_add_title">添加书签</string>
    <string name="bookmark_edit_tv_name_text">名称</string>
    <string name="bookmark_edit_tv_url_text">网址</string>
    <string name="bookmark_name_hint">请输入书签名称</string>
    <string name="bookmark_url_hint">请输入书签地址</string>
    <string name="history_empty_tv_text">清空</string>
    <string name="downloading">下载中</string>
    <string name="done">已完成</string>
    <string name="select_location_cancel">取消</string>
    <string name="select_location_commit">确定</string>
    <string name="net_ok">网络已连接</string>
    <string name="net_dismiss">网络不可用，请检查网络设置</string>
    <string name="input_keywords_info">请输入搜索关键字</string>
    <string name="clear_data_title">浏览器数据清除</string>
    <string name="clear_data_cookie">清除Cookie</string>
    <string name="clear_data_cache">清除Cache</string>
    <string name="clear_data_pwd">清除表单</string>
    <string name="clear_data_delete">删除</string>
    <string name="default_browser_title">默认主页</string>
    <string name="default_browser_baidu">百度</string>
    <string name="default_browser_sougou">搜狗</string>
    <string name="default_browser_taobao">淘宝</string>
    <string name="default_browser_youku">优酷</string>
    <string name="default_browser_xiecheng">携程</string>
    <string name="default_browser_tianmao">天猫</string>
    <string name="default_browser_tengxun">腾讯</string>
    <string name="default_browser_souhu">搜狐</string>
    <string name="default_browser_58">58同城</string>
    <string name="weblink_title">推荐网址</string>
    <string name="weblink_ganji">赶集网</string>
    <string name="weblink_wangyi">网易</string>
    <string name="weblink_renren">人人</string>
    <string name="weblink_tianya">天涯</string>
    <string name="weblink_fenghuang">凤凰</string>
    <string name="weblink_xinlang">新浪</string>
    <string name="back_tip">再按一次返回键退出</string>
    <string name="loading_info">正在加载中...</string>
    <string name="dialog_delete">确认删除数据？</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_null">未选中清除数据</string>
    <string name="dialog_delete_success">数据清除成功</string>
    <string name="dialog_init">确认初始化默认设置？</string>
    <string name="showImage">查看图片</string>
    <string name="saveImage">保存图片</string>
    <string name="shareImage">分享图片</string>
    <string name="add_bookmark_wait_toast">网页加载中，请稍后添加书签！</string>
    <string name="add_bookmark_update_toast">该网址已经收藏过，书签已更新！</string>
    <string name="add_bookmark_toast">书签已添加！</string>
    <string name="update_bookmark_toast">书签已更新！</string>
    <string name="failed_load">加载失败</string>
    <string name="tab_bookmark">书签</string>
    <string name="tab_history">历史</string>
    <string name="empty_dialog_title">清空提示</string>
    <string name="empty_dialog_message">是否清空全部历史记录？</string>
    <string name="empty_dialog_negative">取消</string>
    <string name="empty_dialog_neutral">清空</string>
    <string name="delete_nochecked_toast">请选择要删除的书签！</string>
    <string name="delete_dialog_title">删除提示</string>
    <string name="delete_dialog_message1">是否删除选中的</string>
    <string name="delete_dialog_message2">项书签？</string>
    <string name="delete_dialog_negative">取消</string>
    <string name="delete_dialog_neutral">删除</string>
    <string name="search_url_none">请输入搜索网址</string>
    <string name="search_url_error">搜索网址格式有误</string>
    <string name="manage_download">下载管理</string>
    <string name="none_download_item">无记录</string>
    <string name="loaded_tip">已在下载完成列表中</string>
    <string name="loading_tip">已在下载列表中</string>
    <string name="history_group_title_today">今天</string>
    <string name="history_group_title_yesterday">昨天</string>
    <string name="history_group_title_last">以前</string>
    <string name="tool_title">工具箱</string>
    <string name="tool_copy_link">复制链接</string>
    <string name="tool_saoyisao">扫一扫</string>
    <string name="copy_tip">网页链接已复制到剪切板上</string>

    <string-array name="adBlockUrl">
        <item>ubmcmm.baidustatic.com</item>
        <item>cpro2.baidustatic.com</item>
        <item>cpro.baidustatic.com</item>
        <item>s.lianmeng.360.cn</item>
        <item>nsclick.baidu.com</item>
        <item>pos.baidu.com</item>
        <item>cbjs.baidu.com</item>
        <item>cpro.baidu.com</item>
        <item>images.sohu.com/cs/jsfile/js/c.js</item>
        <item>union.sogou.com/</item>
        <item>sogou.com/</item>
        <item>a.baidu.com</item>
        <item>c.baidu.com</item>
        <item>adx</item>
        <item>http://www.bxwx.org/ads/</item>
        <item>http://cpro.baidu.com/cpro/ui/</item>
        <item>http://pic.woniu666.com/</item>
    </string-array>

</resources>