<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center">

        <ImageView
            android:id="@+id/bookmark_edit_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:src="@drawable/setting_back" />

        <TextView
            android:id="@+id/bookmark_edit_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_add_title"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bookmark_edit_tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location_commit"
            android:layout_marginRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/bookmark_edit_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_edit_tv_name_text" />

        <EditText
            android:id="@+id/bookmark_edit_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookmark_name_hint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/bookmark_edit_tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_edit_tv_url_text" />

        <EditText
            android:id="@+id/bookmark_edit_et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookmark_url_hint"
            android:inputType="textUri"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>