<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cancel_select_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/select_location_cancel"
            android:textColor="@color/title_color"
            android:textSize="20sp" />
        
        <View 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            />
        
        <TextView 
            android:id="@+id/commit_select_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/select_location_commit"
            android:textColor="@color/title_color"
            android:textSize="20sp" />
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/grey"
        />
    
	<TextView
        android:id="@+id/curent_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/action_settings"
        android:textColor="@color/grey"
        android:padding="2dp"
        android:textSize="15sp" />
	
	<View
	    android:layout_width="match_parent" 
	    android:layout_height="1dp"
	    android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
	    android:background="@color/grey"
	    />
	
    <ListView
        android:id="@+id/location_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>